--- a/css/bootstrap-custom.css
+++ b/css/bootstrap-custom.css
@@ -383,11 +383,24 @@ html{
 	background-color: #E6FCFB;
 }
 
+.lightblue-2{
+	background-color: #94FFE3;
+}
+
+
+.lightblue-3{
+	background-color: #87E6E8;
+}
+
 .watergreen{
 	background-color: #00E0C7;
 }
 
 /*背景顏色 #FFFFFF*/
+.lightgray{
+	background-color: #dee2e6;
+}
+
 .white{
 	background-color: #FFFFFF;
 }
@@ -665,12 +678,12 @@ html{
 			width:50%;
 			height:20px;
 		}
-		#SkillBar{
+		[id*="SkillBar"]{
 			text-align: right;
 			width:0%;
 			height:20px;
 			transition: ease-out 3s;
-			background-color: skyblue;
+			/*background-color: skyblue;*/
 			padding-right: 10px;
 			color:white;
 		}
@@ -702,6 +715,31 @@ es 1s linear infinite;
 	background-size: cover;
 	width:100%;
 	height:300px;
+	transition: ease 0.5s;
+}
+
+#up1_photo::before{
+	content:"一起溫暖桃園 \A 2017.12.23";
+	background-color: rgba(0,0,0,0.5);
+	background-size: cover;
+	display: flex;
+	color:white;
+	height: 100%;
+	width:100%;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+	white-space: pre;
+	font-family:Microsoft JhengHei !important;
+	font-size: 4rem; 
+	transition: ease 1s;
+	border-top-left-radius: 1rem;
+	border-top-right-radius: 1rem;
+	opacity:0;
+}
+
+#up1_photo:hover::before{
+	opacity: 1;
 }
 
 #down1_photo{
@@ -711,36 +749,147 @@ es 1s linear infinite;
 	height:300px;
 }
 
-/*時間痕跡高度*/
+
+#down1_photo::before{
+	content:"薑就對了 \A 2018.4~2018.5";
+	background-color: rgba(0,0,0,0.5);
+	background-size: cover;
+	display: flex;
+	color:white;
+	height: 100%;
+	width:100%;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+	white-space: pre;
+	font-family:Microsoft JhengHei !important;
+	font-size: 4rem; 
+	transition: ease 1s;
+	border-top-left-radius: 1rem;
+	border-top-right-radius: 1rem;
+	opacity:0;
+}
+
+#down1_photo:hover::before{
+	opacity: 1;
+}
+
+/*時間痕高度*/
 .timeline{
 	height:70px;
 	justify-content: space-around;
 }
 
 /*時間痕跡圖片*/
-#school1{
-	background-image: url(../img/school1.png);
+[id*="school"]{
 	background-size: cover;
 	width:60px;
 	height:60px;
+}
+
+#school1{
+	background-image: url(../img/school1.png);
+	
 }
 #school2{
 	background-image: url(../img/school2.png);
-	background-size: cover;
-	width:60px;
-	height:60px;
 }
 #school3{
 	background-image: url(../img/school3.png);
-	background-size: cover;
-	width:60px;
-	height:60px;
 }
 #school4{
 	background-image: url(../img/school4.png);
-	background-size: cover;
-	width:60px;
-	height:60px;
+}
+
+/*時間的痕跡tooltip*/
+.auto-top-tooltip{
+	background: black;
+	color:white;
+	border-radius: 7px;
+	padding:5px;
+	font-size: 12px;
+	margin-top: 65px;
+    position: absolute;
+}
+
+.auto-top-tooltip::after{
+	content: "";
+    position: absolute;
+    margin-top: -15px;
+    margin-left: -28px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent transparent black transparent;
+}
+
+.auto-bottom-tooltip{
+	background: black;
+    color: white;
+    border-radius: 7px;
+    padding: 5px;
+    font-size: 12px;
+    margin-top: -32px;
+    position: absolute;
+}
+
+.auto-bottom-tooltip::after{
+	content: "";
+    position: absolute;
+    margin-top: 22px;
+    margin-left: -28px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: black transparent transparent transparent;
+}
+
+#ele{
+	animation: elementry 8s infinite;
+}
+
+@keyframes elementry{
+	0%{ opacity: 0; }
+	5%{opacity: 1; }
+	20%{opacity: 1; }
+	25%{opacity: 0; }
+	100%{opacity:0; }
+}
+
+#jun{
+	animation: junior 8s infinite;
+}
+
+@keyframes junior{
+	0%{ opacity: 0; }
+	25%{opacity: 0; }
+	30%{opacity: 1; }
+	45%{opacity: 1; }
+	50%{opacity: 0; }
+	100%{opacity:0; }
+}
+
+#hig{
+	animation: high 8s infinite;
+}
+
+@keyframes high{
+	0%{ opacity: 0; }
+	50%{opacity: 0; }
+	55%{opacity: 1; }
+	70%{opacity: 1; }
+	75%{opacity: 0; }
+	100%{opacity:0; }
+}
+
+#col{
+	animation: colege 8s infinite;
+}
+
+@keyframes colege{
+	0%{ opacity: 0; }
+	75%{ opacity: 0; }
+	80%{ opacity: 1; }
+	95%{opacity: 1; }
+	100%{opacity:0; }
 }
 
 /*水平線粗細 語法:hr-類型*/
@@ -758,106 +907,379 @@ es 1s linear infinite;
 
 	/*社團區照片*/
 /*社團介紹*/
+.club[id*="_photo"]{
+	height: 200px;
+	width:300%;
+	background-size: cover;
+}
+
 #club_intro_photo{
 	background-image: url(../img/club_intro.jpg);
-	height: 200px;
-	width:50%;
-	background-size: cover;
+	
 	min-width: 258.41px !important;
 }
 
 /*聖誕慈善嘉年華*/
 #chirstmas_photo{
 	background-image: url(../img/sd.jpg);
-	height: 200px;
-	width:300%;
-	background-size: cover;
 	min-width: 258.41px !important;
 }
+
+#chirstmas_photo::before{
+	content:"一起溫暖桃園 \A 2018.12.23";
+	background-color: rgba(0,0,0,0.5);
+	background-size: cover;
+	display: flex;
+	color:white;
+	height: 100%;
+	width:100%;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+	white-space: pre;
+	font-family:Microsoft JhengHei !important;
+	font-size: 2rem; 
+	transition: ease 1s;
+	border-radius: 1rem;
+	opacity:0;
+}
+
+#chirstmas_photo:hover::before{
+	opacity: 1;
+}
+
 
 /*親子慈善園遊會*/
 #market_photo{
 	background-image: url(../img/yy.jpg);
-	height: 200px;
-	width:300%;
-	background-size: cover;
 	max-width: 258.41px !important;
+}
+
+#market_photo::before{
+	content:"親子慈善園遊會 \A 2019.4.21";
+	background-color: rgba(0,0,0,0.5);
+	background-size: cover;
+	display: flex;
+	color:white;
+	height: 100%;
+	width:100%;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+	white-space: pre;
+	font-family:Microsoft JhengHei !important;
+	font-size: 2rem; 
+	transition: ease 1s;
+	border-radius: 1rem;
+	opacity:0;
+}
+
+#market_photo:hover::before{
+	opacity: 1;
 }
 
 /*誰是中原人*/
 #welcome_photo{
 	background-image: url(../img/ss.jpg);
-	height: 200px;
-	width:300%;
-	background-size: cover;
 	min-width: 258.41px !important;
+}
+
+#welcome_photo::before{
+	content:"誰是中原人 \A 2018.8.13~15";
+	background-color: rgba(0,0,0,0.5);
+	background-size: cover;
+	display: flex;
+	color:white;
+	height: 100%;
+	width:100%;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+	white-space: pre;
+	font-family:Microsoft JhengHei !important;
+	font-size: 2rem; 
+	transition: ease 1s;
+	border-radius: 1rem;
+	opacity:0;
+}
+
+#welcome_photo:hover::before{
+	opacity: 1;
 }
 
 /*弗丁的科學實驗室*/
 #summercamp_photo{
 	background-image: url(../img/fd.jpg);
-	height: 200px;
-	width:300%;
-	background-size: cover;
 	max-width: 258.41px !important;
+}
+
+#summercamp_photo::before{
+	content:"弗丁科學實驗室 \A 2019.1.22~24";
+	background-color: rgba(0,0,0,0.5);
+	background-size: cover;
+	display: flex;
+	color:white;
+	height: 100%;
+	width:100%;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+	white-space: pre;
+	font-family:Microsoft JhengHei !important;
+	font-size: 2rem; 
+	transition: ease 1s;
+	border-radius: 1rem;
+	opacity:0;
+}
+
+#summercamp_photo:hover::before{
+	opacity: 1;
 }
 
 	/*我的興趣圖片*/
 
 /*寫程式*/
-#coding{
-	background-image: url(../img/coding.jpg);
+.card-img-top{
 	background-size: cover;
 	width:100%;
 	min-height:278.68px;
+}
+
+#coding{
+	background-image: url(../img/coding.jpg);
+}
+
+#coding::before{
+	content:"- SoloLearn -";
+	background-color: rgba(0,0,0,0.5);
+	background-size: cover;
+	display: flex;
+	color:white;
+	height: 100%;
+	width:100%;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+	white-space: pre;
+	
+	font-size: 2.5rem; 
+	transition: ease 1s;
+	border-top-left-radius: 1rem;
+	border-top-right-radius: 1rem;
+	opacity:0;
+}
+
+#coding:hover::before{
+	opacity: 1;
 }
 
 /*吸收冷知識*/
 #knowledge{
 	background-image: url(../img/knowledge.jpg);
+}
+
+#knowledge::before{
+	content:"- YouTube -";
+	background-color: rgba(0,0,0,0.5);
 	background-size: cover;
+	display: flex;
+	color:white;
+	height: 100%;
 	width:100%;
-	min-height:278.68px;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+	white-space: pre;
+	
+	font-size: 2.5rem; 
+	transition: ease 1s;
+	border-top-left-radius: 1rem;
+	border-top-right-radius: 1rem;
+	opacity:0;
+}
+
+#knowledge:hover::before{
+	opacity: 1;
 }
 
 /*出外踏青*/
 #hiking{
 	background-image: url(../img/ps.jpg);
+}
+
+#hiking::before{
+	content:"- 皇帝殿 -";
+	background-color: rgba(0,0,0,0.5);
 	background-size: cover;
+	display: flex;
+	color:white;
+	height: 100%;
 	width:100%;
-	min-height:278.68px;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+	white-space: pre; 
+	font-family:Microsoft JhengHei !important;
+	font-size: 2rem; 
+	transition: ease 1s;
+	border-top-left-radius: 1rem;
+	border-top-right-radius: 1rem;
+	opacity:0;
+}
+
+#hiking:hover::before{
+	opacity: 1;
+}
+
+/*錯誤防止專用div*/
+.height-0{
+	height: 0;
+	width:0;
+}
+.after-height-factor{
+	width:0;
+	min-height:480px;
+}
+
+.anchor-position-alter{
+	padding-top: 60px;
+	width:0;
+	height:0;
+	z-index: -1;
 }
 
 	/*作品集照片*/
 
 /*個人網頁*/
-#Aboutme_photo{
-	background-image: url(../img/self_intro.png);
+.works[id*="_photo"]{
 	background-size: cover;
 	width:50%;
 	min-height:278.68px;
+}
+
+#Aboutme_photo{
+	background-image: url(../img/self_intro.png);
+}
+
+#Aboutme_photo::before{
+	content:"- 冠廷の小栈 -";
+	background-color: rgba(0,0,0,0.5);
+	background-size: cover;
+	display: flex;
+	color:white;
+	height: 100%;
+	width:100%;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+	white-space: pre; 
+	font-family:Microsoft JhengHei !important;
+	font-size: 2rem; 
+	transition: ease 1s;
+	border-radius: 1rem;
+	opacity:0;
+}
+
+#Aboutme_photo:hover::before{
+	opacity: 1;
 }
 
 /*中原大學，我們的第二個家*/
 #midterm_photo{
 	background-image: url(../img/midterm.png);
-	background-size: cover;
-	width:50%;
-	min-height:278.68px;
 }
+
+#midterm_photo::before{
+	content:"- 中原大學，我們的第二個家 -";
+	background-color: rgba(0,0,0,0.5);
+	background-size: cover;
+	display: flex;
+	color:white;
+	height: 100%;
+	width:100%;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+	white-space: pre; 
+	font-family:Microsoft JhengHei !important;
+	font-size: 2rem; 
+	transition: ease 1s;
+	border-radius: 1rem;
+	opacity:0;
+}
+
+#midterm_photo:hover::before{
+	opacity: 1;
+}
+
 
 /*回味無窮的義大利之旅*/
 #trip_photo{
 	background-image: url(../img/trip.png);
-	background-size: cover;
-	width:50%;
-	min-height:278.68px;
 }
+
+#trip_photo::before{
+	content:"- 回味無窮的義大利之旅 -";
+	background-color: rgba(0,0,0,0.5);
+	background-size: cover;
+	display: flex;
+	color:white;
+	height: 100%;
+	width:100%;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+	white-space: pre; 
+	font-family:Microsoft JhengHei !important;
+	font-size: 2rem; 
+	transition: ease 1s;
+	border-radius: 1rem;
+	opacity:0;
+}
+
+#trip_photo:hover::before{
+	opacity: 1;
+}
+
 
 /*嗨翻天俱樂部*/
 #junior_photo{
 	background-image: url(../img/junior.png);
+}
+
+#junior_photo::before{
+	content:"- 冠廷的嗨翻天俱樂部 -";
+	background-color: rgba(0,0,0,0.5);
 	background-size: cover;
-	width:50%;
-	min-height:278.68px;
+	display: flex;
+	color:white;
+	height: 100%;
+	width:100%;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+	white-space: pre; 
+	font-family:Microsoft JhengHei !important;
+	font-size: 2rem; 
+	transition: ease 1s;
+	border-radius: 1rem;
+	opacity:0;
+}
+
+#junior_photo:hover::before{
+	opacity: 1;
+}
+
+/*logo設定*/
+.logo{
+	height:23px;
+	padding:0;
+	margin:0;
+}
+
+/*footer*/
+.cpr{
+	height: 15px;
+	margin-top:-5px;
+	margin-left:3px;
 }
