已更新首頁
已加入footer
已修改navbar
修正文字位置不正確問題
*檔案中的mdb是mdbootstrap(由第三方所修改過的bootstrap 請勿修改)

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5296,10 +5296,10 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .progress-bar-animated {
-  -webkit-animation: progress-bar-strip
-es 1s linear infinite;
+  -webkit-animation: progress-bar-stripes 1s linear infinite;
   animation: progress-bar-stripes 1s linear infinite;
 }
+
 @media (prefers-reduced-motion: reduce) {
   .progress-bar-animated {
     -webkit-animation: none;
@@ -7598,7 +7598,7 @@ button.bg-dark:focus {
     -ms-flex-negative: 1 !important;
     flex-shrink: 1 !important;
   }
-  .justify-content-xl-start {
+  .F-start {
     -ms-flex-pack: start !important;
     justify-content: flex-start !important;
   }
