--- a/css/mdb.css
+++ b/css/mdb.css
@@ -10,159 +10,5 @@ footer.page-footer {
   footer.page-footer a {
     color: #fff; }
 
-.font-small {
-  font-size: 0.9rem; }
-
-.unique-color-dark {
-  background-color: #1c2331 !important; }
-
-.deep-purple.darken-1 {
-background-color: #5e35b1 !important; }
-
-.deep-purple.darken-2 {
-  background-color: #512da8 !important; }
-
-.deep-purple.darken-3 {
-  background-color: #4527a0 !important; }
-
-.deep-purple.darken-4 {
-  background-color: #311b92 !important; }
-
-.deep-purple.accent-1 {
-  background-color: #b388ff !important; }
-
-.deep-purple.accent-2 {
-  background-color: #7c4dff !important; }
-
-.deep-purple.accent-3 {
-  background-color: #651fff !important; }
-
-.deep-purple.accent-4 {
-  background-color: #6200ea !important; }
-
-/*footer 特殊 css*/
-
-/*位置固定器*/
-footer.page-footer {
-    bottom: 0;
-    color: #fff;
-}
-
-/*小號字體(0.9rem)*/
-.font-small {
-    font-size: .9rem;
-}
-
-/*深色背景*/
-.special-color-dark {
-    background-color: #263238!important;
-}
-
-/*footer 版權宣告字樣專用*/
-footer.page-footer .footer-copyright {
-    overflow: hidden;
-    background-color: rgba(0,0,0,.2);
-    color: rgba(255,255,255,.6);
-}
-
-/*按鈕特效*/
-.btn-floating {
-    -webkit-box-shadow: 0 5px 11px 0 rgba(0,0,0,.18), 0 4px 15px 0 rgba(0,0,0,.15);
-    box-shadow: 0 5px 11px 0 rgba(0,0,0,.18), 0 4px 15px 0 rgba(0,0,0,.15);
-    width: 47px;
-    height: 47px;
-    position: relative;
-    z-index: 1;
-    vertical-align: middle;
-    display: inline-block;
-    overflow: hidden;
-    -webkit-transition: all .2s ease-in-out;
-    -o-transition: all .2s ease-in-out;
-    transition: all .2s ease-in-out;
-    margin: 10px;
-    -webkit-border-radius: 50%;
-    border-radius: 50%;
-    padding: 0;
-    cursor: pointer;
-    
-}
-
-/*社交按鈕用(未知用途)*/
-.waves-effect {
-    position: relative;
-    cursor: pointer;
-    overflow: hidden;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    -webkit-tap-highlight-color: transparent;
-}
-
-/*社交按鈕用(未知用途)*/
-a.waves-effect, a.waves-light {
-     display: inline-block; 
-}
-
-  /*社交按鈕字形及位置*/
-/*社交按鈕字形(特殊字形請勿更改)*/
-.fab {
-    font-family: 'Font Awesome 5 Brands';
-}
-
-/*社交按鈕位置*/
-.fa, .fab, .fal, .far, .fas {
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-    display: inline-block;
-    font-style: normal;
-    font-variant: normal;
-    text-rendering: auto;
-    line-height: 1;
-    font-size: 20px;
-}
-
-/*fb 按鈕*/
-.btn-fb {
-    background-color: #3b5998!important;
-    color: #fff;
-}
-.fa-facebook-f:before {
-    content: "\f39e";
-}
-
-/*twitter 按鈕*/
-.btn-tw {
-    background-color: #55acee!important;
-    color: #fff;
-}
-.fa-twitter:before {
-    content: "\f099";
-}
-
-/*G+ 按鈕*/
-.btn-gplus {
-    background-color: #dd4b39!important;
-    color: #fff;
-}
-.fa-google-plus-g:before {
-    content: "\f0d5";
-}
-
-/*linked in 按鈕*/
-.btn-li {
-    background-color: #0082ca!important;
-    color: #fff;
-}
-.fa-linkedin-in:before {
-    content: "\f0e1";
-}
-
-/*dribbble 按鈕*/
-.btn-dribbble {
-    background-color: #ec4a89!important;
-    color: #fff;
-}
-.fa-dribbble:before {
-    content: "\f17d";
-}
+  .blue {
+  background-color: #2196f3 !important; }
